[package]
name = "bulwark-community-long-content-type"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bulwark-wasm-sdk = { version = "0.4.0", path = "../../../bulwark/crates/wasm-sdk" }

[dev-dependencies]
approx = "0.5"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
