[package]
name = "numeric-host"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bulwark-wasm-sdk = "0.3.0"
anyhow = "*"
regex = "1.8.4"
http = "0.2.11"

[dev-dependencies]
http = "0.2.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"