[package]
name = "bulwark-community-size-limit"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bulwark-wasm-sdk = { version = "0.3.0", path = "../../../bulwark/crates/wasm-sdk" }
http = "*"
anyhow = "*"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
